--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -37,7 +37,7 @@
                 &:focus,
                 &:active {
                     transition: all 0.2s ease;
-                    background-color: rgba($greenColor, .8);
+                    background-color: rgba($greenColor, .5);
                 }
             }
             
